--- a/The Iron Reserve.html
+++ b/The Iron Reserve.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>The Iron Reserve – Guild Inventory</title>
-
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
   <style>
@@ -21,19 +20,19 @@
     body{
       font-family:'Segoe UI',Tahoma,Verdana,sans-serif;
       background:var(--bg-dark);color:var(--text);
-      padding:20px;          /* keep original 20 px */
+      padding:20px;
     }
 
     /* ========== NAVIGATION (shared) ========== */
     .site-header{
       display:flex;align-items:center;gap:.75rem;
       background:#1f1f1f;border-bottom:2px solid #444;
-      margin:-20px -20px 1.6rem;      /* offset body padding */
+      margin:-20px -20px 1.6rem;
       padding:.8rem 1rem;position:relative;
     }
-    .logo{font-weight:700;color:var(--accent);font-size:1.1rem;white-space:nowrap;}
+    .logo{font-weight:700;color:var(--accent);font-size:1.1rem;}
 
-    .nav-toggle{display:none;}                 /* hidden checkbox */
+    .nav-toggle{display:none;}
     .hamburger{
       font-size:1.4rem;color:#fff;cursor:pointer;
       margin-left:auto;user-select:none;display:block;
@@ -43,20 +42,18 @@
       position:absolute;left:0;right:0;top:100%;
       background:#1f1f1f;border-top:2px solid #444;padding:1rem;
     }
-    .site-nav a{color:#fff;text-decoration:none;font-weight:600;white-space:nowrap;}
+    .site-nav a{color:#fff;text-decoration:none;font-weight:600;}
     .site-nav a:hover{color:var(--accent);}
-    /* toggle */
     .nav-toggle:checked + .hamburger + .site-nav{display:flex;}
 
-    /* desktop layout */
     @media(min-width:620px){
-      body{padding:32px;}                           /* scale up */
+      body{padding:32px;}
       .site-header{margin:-32px -32px 2rem;padding:1rem 1.25rem;}
       .hamburger{display:none;}
       .site-nav{
         display:flex !important;position:static;
-        flex-direction:row;gap:1.25rem;margin-left:auto;
-        background:transparent;border:none;padding:0;
+        flex-direction:row;gap:1.25rem;margin-left:auto;padding:0;
+        background:transparent;border:none;
       }
     }
 
@@ -65,15 +62,27 @@
       text-align:center;color:var(--accent);margin:0 0 .9rem;
       font-size:clamp(1.5rem,5vw,2.2rem);
     }
+
+    /* responsive table wrapper */
+    .table-wrap{
+      overflow-x:auto;
+      -webkit-overflow-scrolling:touch;
+      border-radius:var(--radius);
+    }
     table{
-      width:100%;border-collapse:collapse;margin-bottom:20px;
+      width:100%;min-width:650px;      /* forces swipe on narrow screens */
+      border-collapse:collapse;margin-bottom:20px;
     }
     th,td{
       padding:12px;border-bottom:1px solid #333;text-align:left;vertical-align:top;
     }
-    th{background:#333;color:var(--accent);}
+    th{
+      background:#333;color:var(--accent);
+      position:sticky;top:0;           /* header stays visible while swiping */
+    }
     tr:nth-child(even){background:var(--bg-card);}
     .note{font-size:.9em;color:#aaa;margin-top:10px;}
+
   </style>
 </head>
 
@@ -97,22 +106,25 @@
 
 <h1>🏺 The Iron Reserve</h1>
 
-<p>Welcome to the Iron Reserve — a vault of donated, recovered, or misplaced gear. Items are available for purchase or rental (where applicable). Remember: lose it, and you owe the full cost!</p>
+<p>Welcome to the Iron Reserve — a vault of donated, recovered, or misplaced gear. Items are available for purchase or rental (where applicable). <br>Remember: lose it, and you owe the full cost!</p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Item Name</th>
-      <th>Type</th>
-      <th>Description</th>
-      <th>Price&nbsp;(Buy)</th>
-      <th>Price&nbsp;(Rent)</th>
-      <th>Qty</th>
-      <th>Currently Rented</th>
-    </tr>
-  </thead>
-  <tbody id="itemTable"></tbody>
-</table>
+<!-- responsive table -->
+<div class="table-wrap">
+  <table>
+    <thead>
+      <tr>
+        <th>Item Name</th>
+        <th>Type</th>
+        <th>Description</th>
+        <th>Price&nbsp;(Buy)</th>
+        <th>Price&nbsp;(Rent)</th>
+        <th>Qty</th>
+        <th>Currently Rented</th>
+      </tr>
+    </thead>
+    <tbody id="itemTable"></tbody>
+  </table>
+</div>
 
 <div class="note">
   <strong>Note:</strong> Rental price is 20 % of the listed cost for non-consumable items. Consumables (like potions) must be bought outright.
@@ -271,16 +283,13 @@
 function populateTable(){
   const tb=document.getElementById('itemTable');
   items.forEach(it=>{
-    const r=document.createElement('tr');
-    r.innerHTML=`
-      <td>${it.name}</td>
-      <td>${it.type}</td>
-      <td>${it.description}</td>
-      <td>${it.price}</td>
-      <td>${it.consumable?'-':(()=>{const[n,c]=it.price.split(' ');return Math.ceil(+n*0.2)+' '+c;})()}</td>
-      <td>${it.quantity}</td>
-      <td>${it.rented}</td>`;
-    tb.appendChild(r);
+    const rent = it.consumable ? '-' :
+      (()=>{const[n,c]=it.price.split(' ');return Math.ceil(+n*0.2)+' '+c;})();
+    tb.insertAdjacentHTML('beforeend',`
+      <tr>
+        <td>${it.name}</td><td>${it.type}</td><td>${it.description}</td>
+        <td>${it.price}</td><td>${rent}</td><td>${it.quantity}</td><td>${it.rented}</td>
+      </tr>`);
   });
 }
 populateTable();
